switched to JPMS, so we can build images with jlink